--- a/Rendering/Rendering.vcxproj
+++ b/Rendering/Rendering.vcxproj
@@ -70,31 +70,38 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>E:\Ralts\Amatsu\3rdparty\GLFW\include;E:\Ralts\Amatsu\3rdparty\glad\include;E:\Ralts\Amatsu\3rdparty\imGui;E:\Ralts\Amatsu\3rdparty\stb_image</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Ralts\Amatsu\3rdparty\GLFW\include;E:\Ralts\Amatsu\3rdparty\glad\include;E:\Ralts\Amatsu\3rdparty\imGui;E:\Ralts\Amatsu\3rdparty\stb_image;E:\Ralts\Amatsu\3rdparty\glm</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;glad.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glad.lib;imGui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glfw;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glad;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\imGui</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\3rdparty\stb_image\stb_image.cpp" />
+    <ClCompile Include="..\src\Core\Application.cpp" />
+    <ClCompile Include="..\src\ImGUI\ImGuiBuild.cpp" />
     <ClCompile Include="..\src\main.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="..\src\Paltform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="..\src\Paltform\Windows\WindowsInput.cpp" />
+    <ClCompile Include="..\src\Paltform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="..\src\Renderer\Rendering.cpp" />
+    <ClCompile Include="..\src\UI\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3rdparty\glad\glad.vcxproj">
@@ -109,7 +116,23 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\3rdparty\stb_image\stb_image.h" />
+    <ClInclude Include="..\src\Core\Application.h" />
+    <ClInclude Include="..\src\Core\Input.h" />
+    <ClInclude Include="..\src\Core\KeyCodes.h" />
+    <ClInclude Include="..\src\Core\Macro.h" />
+    <ClInclude Include="..\src\Core\Timestep.h" />
+    <ClInclude Include="..\src\Core\Window.h" />
+    <ClInclude Include="..\src\engine.h" />
+    <ClInclude Include="..\src\Event\ApplicationEvent.h" />
+    <ClInclude Include="..\src\Event\Event.h" />
+    <ClInclude Include="..\src\Event\KeyEvent.h" />
+    <ClInclude Include="..\src\Event\MouseEvent.h" />
+    <ClInclude Include="..\src\Paltform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="..\src\Paltform\Windows\WindowsWindow.h" />
     <ClInclude Include="..\src\pch.h" />
+    <ClInclude Include="..\src\Renderer\GraphicsContext.h" />
+    <ClInclude Include="..\src\Renderer\Rendering.h" />
+    <ClInclude Include="..\src\UI\UI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
