--- a/Rendering/Rendering.vcxproj.filters
+++ b/Rendering/Rendering.vcxproj.filters
@@ -44,7 +44,7 @@
     <ClCompile Include="..\src\Paltform\OpenGL\OpenGLContext.cpp">
       <Filter>Platform\OpenGL</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\Renderer\Rendering.cpp">
+    <ClCompile Include="..\src\Renderer\Scene.cpp">
       <Filter>Renderer</Filter>
     </ClCompile>
     <ClCompile Include="..\src\UI\UI.cpp">
@@ -52,6 +52,24 @@
     </ClCompile>
     <ClCompile Include="..\src\ImGUI\ImGuiBuild.cpp">
       <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Renderer\Buffer.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Renderer\Camera.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Renderer\CameraController.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Paltform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Renderer\VertexArray.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Paltform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -99,11 +117,29 @@
     <ClInclude Include="..\src\Core\Macro.h">
       <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\Renderer\Rendering.h">
+    <ClInclude Include="..\src\Renderer\Scene.h">
       <Filter>Renderer</Filter>
     </ClInclude>
     <ClInclude Include="..\src\UI\UI.h">
       <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Renderer\Buffer.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Renderer\Camera.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Renderer\CameraController.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Paltform\OpenGL\OpenGLBuffer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Renderer\VertexArray.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Paltform\OpenGL\OpenGLVertexArray.h">
+      <Filter>Platform\OpenGL</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
