--- a/Rendering/Rendering.vcxproj
+++ b/Rendering/Rendering.vcxproj
@@ -162,6 +162,14 @@
     <ClInclude Include="..\src\Renderer\VertexArray.h" />
     <ClInclude Include="..\src\UI\UI.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\assets\shaders\ColorShader.glsl" />
+    <None Include="..\assets\shaders\Texture.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\assets\textures\Checkerboard.png" />
+    <Image Include="..\assets\textures\ChernoLogo.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
