--- a/Rendering/Rendering.vcxproj
+++ b/Rendering/Rendering.vcxproj
@@ -57,8 +57,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;glad.lib;imGui.lib;assimp.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glfw;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glad;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\imGui;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\assimp</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;glad.lib;imGui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glfw;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\glad;E:\Ralts\Amatsu\Amatsu\bin\Debug-x64\imGui</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -77,8 +77,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;glad.lib;imGui.lib;assimp.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>E:\Ralts\Amatsu\Amatsu\bin\Release-x64\glfw;E:\Ralts\Amatsu\Amatsu\bin\Release-x64\glad;E:\Ralts\Amatsu\Amatsu\bin\Release-x64\imGui;E:\Ralts\Amatsu\Amatsu\bin\Release-x64\assimp</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;glad.lib;imGui.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Ralts\Amatsu\Amatsu\bin\Release-x64\glfw;E:\Ralts\Amatsu\Amatsu\bin\Release-x64\glad;E:\Ralts\Amatsu\Amatsu\bin\Release-x64\imGui</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -175,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\assets\shaders\ColorShader.glsl" />
+    <None Include="..\assets\shaders\Model.glsl" />
     <None Include="..\assets\shaders\Texture.glsl" />
   </ItemGroup>
   <ItemGroup>
