--- a/Rendering/Rendering.vcxproj
+++ b/Rendering/Rendering.vcxproj
@@ -174,14 +174,30 @@
     <ClInclude Include="..\src\UI\UI.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\assets\shaders\BlinnPhong.glsl" />
+    <None Include="..\assets\shaders\Box.glsl" />
+    <None Include="..\assets\shaders\CubeMap.glsl" />
+    <None Include="..\assets\shaders\FrameBuffer.glsl" />
     <None Include="..\assets\shaders\Light.glsl" />
-    <None Include="..\assets\shaders\Model.glsl" />
+    <None Include="..\assets\shaders\Phong.glsl" />
+    <None Include="..\assets\shaders\Outlining.glsl" />
+    <None Include="..\assets\shaders\Reflect.glsl" />
+    <None Include="..\assets\shaders\instance.glsl" />
     <None Include="..\assets\shaders\Texture.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\assets\textures\Checkerboard.png" />
     <Image Include="..\assets\textures\ChernoLogo.png" />
+    <Image Include="..\assets\textures\container2.png" />
+    <Image Include="..\assets\textures\grass.png" />
     <Image Include="..\assets\textures\marble.jpg" />
+    <Image Include="..\assets\textures\skybox\back.jpg" />
+    <Image Include="..\assets\textures\skybox\bottom.jpg" />
+    <Image Include="..\assets\textures\skybox\front.jpg" />
+    <Image Include="..\assets\textures\skybox\left.jpg" />
+    <Image Include="..\assets\textures\skybox\right.jpg" />
+    <Image Include="..\assets\textures\skybox\top.jpg" />
+    <Image Include="..\assets\textures\window.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
